[package]
name = "rusty_pomodoro"
version = "0.1.0"
edition = "2021"
description = "A feature-rich Pomodoro timer with productivity analytics"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/rusty_pomodoro"
readme = "README.md"
keywords = ["productivity", "timer", "pomodoro", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4.8"
tui = { package = "ratatui", version = "0.23.0" }